; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_clk.c_pcm_set.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_clk.c_pcm_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@CKCTL_3368_PCM_EN = common dso_local global i32 0, align 4
@CKCTL_6358_PCM_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clk*, i32)* @pcm_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcm_set(%struct.clk* %0, i32 %1) #0 {
  %3 = alloca %struct.clk*, align 8
  %4 = alloca i32, align 4
  store %struct.clk* %0, %struct.clk** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i64 (...) @BCMCPU_IS_3368()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* @CKCTL_3368_PCM_EN, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @bcm_hwclock_set(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %7, %2
  %12 = call i64 (...) @BCMCPU_IS_6358()
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32, i32* @CKCTL_6358_PCM_EN, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @bcm_hwclock_set(i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %11
  ret void
}

declare dso_local i64 @BCMCPU_IS_3368(...) #1

declare dso_local i32 @bcm_hwclock_set(i32, i32) #1

declare dso_local i64 @BCMCPU_IS_6358(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
